  `xsltproc_opts` command-line options can be specified multiple
  times.  This makes embedding multiple 'a2x' options in document
  headers easier to manage and less error prone.
- Added ASCIIMathML and LaTeXMathML support to slidy backend.
- Pass the 'encoding' attribute to the Pygments source highlight
  filter command.
- 'a2x': HTML Help `.hhk` file named after AsciiDoc source file.

.Bug fixes
- *FIXED*: Sometimes double backquotes were msinterpreted as inline
  literal macros.  See:
  http://groups.google.com/group/asciidoc/browse_thread/thread/f510ea82a88aaee8
- *FIXED*: Regression in 8.6.2: command-line attributes were not
  available to the global asciidoc.conf.
- *FIXED*: Postponed document title substitutions until backend conf
  files have been loaded (8.6.2 regression). See
  http://groups.google.com/group/asciidoc/browse_thread/thread/42b63ce90c2563b8
- *FIXED*: The XSL Stylesheets customizations were preventing chapter
  and section level TOCs from being generated when using XSL
  Stylesheets via 'a2x'.  See
  http://groups.google.com/group/asciidoc/browse_thread/thread/42b63ce90c2563b8
- *FIXED*: ``UnicodeDecodeError: \'ascii' codec can't decode byte''
  error.  This error is due to a limitation in the Python HTMLParser
  module, see: http://bugs.python.org/issue3932
- *FIXED*: Broken `--no-conf` option (8.6.2 regression).
- *FIXED*: Regression in 8.6.2: configuration attribute entries set in
  the document header may cause a 'FAILED: incomplete configuration
  files' error.
- *FIXED*: 'html4': corrected self closed meta tags.
- *FIXED*: 'a2x' regression in 8.6.2: HTML Help `.hhp` file name had
  reverted to default name instead of the AsciiDoc source file name.
  See:
  http://groups.google.com/group/asciidoc/browse_thread/thread/dedc961b23e9ac56
- *FIXED*: Attributes in man page title caused it to be dropped
  resulting in invalid DocBook output.


Version 8.6.2 (2010-10-03)
--------------------------
.Additions and changes